src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    /* #ffffff */
    --foreground: 0 0% 9%;
    /* #171717 */
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --muted: 0 0% 96%;
    --muted-foreground: 0 0% 45%;
    --border: 0 0% 90%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 4%;
    /* #0a0a0a */
    --foreground: 0 0% 98%;
    /* #fafafa */
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --muted: 0 0% 12%;
    /* #1f1f1f */
    --muted-foreground: 0 0% 65%;
    /* #a3a3a3 */
    --border: 0 0% 15%;
    /* #262626 */
  }
}

@layer base {
  html {
    scroll-behavior: smooth;
  }

  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground tracking-tight antialiased selection:bg-primary selection:text-primary-foreground;
  }
}

